--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 
         <div id="our-travels">
             <div class="container">
-                <div class="card">
+                <!-- <div class="card">
                     <div class="card-header">
                         Our Travels
                     </div>
-                    <div class="card-body">
+                    <div class="card-body"> -->
                         <div class="cards">
                             <div class="face face1">
                                 <div class="content">
@@ -166,8 +166,8 @@
                             </div>
                         </div>
 
-                    </div>
-                </div>
+                    <!-- </div>
+                </div> -->
             </div>
 
         </div>
@@ -277,18 +277,71 @@
         </div>
     </section>
 
-    <footer id="footer">
+    <footer class="footer">
+            <div class="container">
         <div class="social">
-            <a href="#"><i class="fab fa-whatsapp"></i></a>
-
-            <a href="#"><i class="fab fa-instagram"></i></a>
-
-            <a href="#"><i class="fab fa-facebook"></i></a>
-
-            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"> <i class="fab fa-facebook-square"></i> </a>
+            <a href="#"> <i class="fab fa-whatsapp-square"></i> </a>
+            <a href="#"> <i class="fab fa-instagram"></i> </a>
+            <a href="#"> <i class="fab fa-google-plus-square"></i></i> </a>
+            <a href="#"> <i class="fab fa-twitter-square"></i></i></i> </a>
         </div>
-        <h6>copy right by Mahmoud Nagy <i class="far fa-smile-wink"></i></h6>
-        <a href="#header"><i class="fa fa-arrow-alt-circle-up back"></i></a>
+        <div class="row">
+        <div class="content">
+            <div class="contact_us col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                <h3> Contact Us </h3>
+                <i class="fas fa-map-marker-alt"></i>
+                <h5> 123 Abbas El-aqad / nasir city </h5>
+                <br>
+                <i class="fas fa-phone-alt"></i>
+                <h5> 01123003488 </h5>
+                <br>
+                <i class="fas fa-fax"></i>
+                <h5> 01552913175 </h5>
+                <br>
+                <i class="fas fa-envelope-open-text"></i>
+                <h5> mahmoudn509@gmail.com </h5>
+                <br>
+                <i class="fas fa-globe-americas"></i>
+                <h5> https://international-gate.netlify.com </h5>
+            </div>
+
+            <div class="link col-6 col-sm-6 col-md-6 col-lg-2 col-xl-2">
+                <h3> Quick Links </h3>
+                <div class="links">
+                    <a href="#"> Home </a>
+                    <a href="#"> About Us </a>
+                    <a href="#"> Our Works </a>
+                    <a href="#"> Offers </a>
+                </div>
+            </div>
+
+            <div class="our_service col-6 col-sm-6 col-md-6 col-lg-2 col-xl-2">
+                <h3> Our Services </h3>
+                <div class="services">
+                    <span> develop </span>
+                    <span> develop </span>
+                    <span> develop </span>
+                    <span> develop </span>
+                </div>
+            </div>
+
+            <div class="message col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                    <h3> Your Messange </h3>
+                    <form action="index.html" method="post">
+                        <input type="text" name="name" id="name" placeholder="Your Name">
+                        <input type="email" name="email" id="email" placeholder="Your Email">
+                        <input type="text" name="phone" id="phone" placeholder="Your Phone">
+                        <textarea name="message" id="message" cols="10" rows="2" placeholder="Message"></textarea>
+                        <input type="submit" name="submit" value="Submit">
+                </form>
+            </div>
+        </div>    
+    </div>
+    <div class="copyright">
+            <h5> Copyright 2019 @ Mahmoud Nagy All Rights reserved </h5>
+    </div>
+</div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
