--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/content.css">
     <link rel="stylesheet" href="css/loading.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
 
