--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="css/content.css">
     <link rel="stylesheet" href="css/loading.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/cards.css">
+    <link rel="stylesheet" href="css/down_card.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
 
@@ -79,9 +81,9 @@
                 <div class="info">
                     <a href="#book" class="btn">Book Know</a>
                     <a href="#contact-us" class="btn">Contact Us</a><br>
-                    <div class="arrow">
+                    <!-- <div class="arrow">
                         <a href="#about-us"><i class="fa fa-arrow-circle-down"></i></a>
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
@@ -108,14 +110,14 @@
                 </div>
             </div>
         </div>
-
+        <!-- 
         <div id="our-travels">
             <div class="container">
-                <!-- <div class="card">
+                <div class="card">
                     <div class="card-header">
                         Our Travels
                     </div>
-                    <div class="card-body"> -->
+                    <div class="card-body">
                         <div class="cards">
                             <div class="face face1">
                                 <div class="content">
@@ -167,13 +169,82 @@
                             </div>
                         </div>
 
-                    <!-- </div>
-                </div> -->
+                 </div>
+                </div>
             </div>
 
+        </div> -->
+
+        <div class="cards">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+                        <div class="_card">
+                            <div class="image" data-text="Sharm El_Sheikh">
+                                <img src="images/1.jpeg">
+                            </div>
+                            <div class="content">
+                                <h3 class="card-title">Card title</h3>
+                                <p class="card-text">Some quick example text to build on the card title and
+                                    make up the
+                                    bulk of the card's content.
+                                    Some quick example text to build on the card title and
+                                    Some quick example text to build on the card title and
+                                </p>
+                                <a href="#">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+                        <div class="_card">
+                            <div class="image" data-text="Sharm El_Sheikh">
+                                <img src="images/1.jpeg">
+                            </div>
+                            <div class="content">
+                                <h3 class="card-title">Card title</h3>
+                                <p class="card-text">Some quick example text to build on the card title and
+                                    make up the
+                                    bulk of the card's content.</p>
+                                <a href="#">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+                        <div class="_card">
+                            <div class="image" data-text="Sharm El_Sheikh">
+                                <img src="images/1.jpeg">
+                            </div>
+                            <div class="content">
+                                <h3 class="card-title">Card title</h3>
+                                <p class="card-text">Some quick example text to build on the card title and
+                                    make up the
+                                    bulk of the card's content.</p>
+                                <a href="#">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+                        <div class="_card">
+                            <div class="image" data-text="Sharm El_Sheikh">
+                                <img src="images/1.jpeg">
+                            </div>
+                            <div class="content">
+                                <h3 class="card-title">Card title</h3>
+                                <p class="card-text">Some quick example text to build on the card title and
+                                    make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-outline-dark">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div id="offers">
+
+
+
+        <!-- <div id="offers">
             <div class="container">
                 <div class="card">
                     <div class="card-header">
@@ -236,7 +307,7 @@
                 </div>
             </div>
 
-        </div>
+        </div> -->
 
         <!-- <div id="contact-us">
             <div class="container">
@@ -292,88 +363,158 @@
         <a href="#header"><i class="fa fa-arrow-alt-circle-up back"></i></a>
     </footer> -->
 
-
-    <footer class="footer">
+        <div class="down_cards">
             <div class="container">
-        <div class="social">
-            <a href="#"> <i class="fab fa-facebook-square"></i> </a>
-            <a href="#"> <i class="fab fa-whatsapp-square"></i> </a>
-            <a href="#"> <i class="fab fa-instagram"></i> </a>
-            <a href="#"> <i class="fab fa-google-plus-square"></i></i> </a>
-            <a href="#"> <i class="fab fa-twitter-square"></i></i></i> </a>
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+                        <div class="_card">
+                            <div class="face face1">
+                                <div class="content">
+                                    <img src="images/1.jpeg" alt="travel">
+                                    <h5 class="card-title">Card title</h5>
+                                </div>
+                            </div>
+
+                            <div class="face face2">
+                                <div class="content">
+                                    <p>Some quick example text to build on the card title and make up the bulk
+                                        of the card's
+                                        content.</p>
+                                    <a href="#" class="btn btn-outline-dark">Read More</a>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+                        <div class="_card">
+                            <div class="face face1">
+                                <div class="content">
+                                    <img src="images/1.jpeg" alt="travel">
+                                    <h5 class="card-title">Card title</h5>
+                                </div>
+                            </div>
+
+                            <div class="face face2">
+                                <div class="content">
+                                    <p>Some quick example text to build on the card title and make up the bulk
+                                        of the card's
+                                        content.</p>
+                                    <a href="#" class="btn btn-outline-dark">Read More</a>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+                        <div class="_card">
+                            <div class="face face1">
+                                <div class="content">
+                                    <img src="images/1.jpeg" alt="travel">
+                                    <h5 class="card-title">Card title</h5>
+                                </div>
+                            </div>
+
+                            <div class="face face2">
+                                <div class="content">
+                                    <p>Some quick example text to build on the card title and make up the bulk
+                                        of the card's
+                                        content.</p>
+                                    <a href="#" class="btn btn-outline-dark">Read More</a>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="row">
-        <div class="content">
-            <div class="contact_us col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                <h3> Contact Us </h3>
-                <i class="fas fa-map-marker-alt"></i>
-                <h5> 123 Abbas El-aqad / nasir city </h5>
-                <br>
-                <i class="fas fa-phone-alt"></i>
-                <h5> 01123003488 </h5>
-                <br>
-                <i class="fas fa-fax"></i>
-                <h5> 01552913175 </h5>
-                <br>
-                <i class="fas fa-envelope-open-text"></i>
-                <h5> mahmoudn509@gmail.com </h5>
-                <br>
-                <i class="fas fa-globe-americas"></i>
-                <h5> https://international-gate.netlify.com </h5>
-            </div>
 
-            <div class="link col-6 col-sm-6 col-md-6 col-lg-2 col-xl-2">
-                <h3> Quick Links </h3>
-                <div class="links">
-                    <a href="#"> Home </a>
-                    <a href="#"> About Us </a>
-                    <a href="#"> Our Works </a>
-                    <a href="#"> Offers </a>
+
+
+
+        <footer class="footer">
+            <div class="container">
+                <div class="social">
+                    <a href="#"> <i class="fab fa-facebook-square"></i> </a>
+                    <a href="#"> <i class="fab fa-whatsapp-square"></i> </a>
+                    <a href="#"> <i class="fab fa-instagram"></i> </a>
+                    <a href="#"> <i class="fab fa-google-plus-square"></i></i> </a>
+                    <a href="#"> <i class="fab fa-twitter-square"></i></i></i> </a>
+                </div>
+                <div class="row">
+                    <div class="content">
+                        <div class="contact_us col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                            <h3> Contact Us </h3>
+                            <i class="fas fa-map-marker-alt"></i>
+                            <h5> 123 Abbas El-aqad / nasir city </h5>
+                            <br>
+                            <i class="fas fa-phone-alt"></i>
+                            <h5> 01123003488 </h5>
+                            <br>
+                            <i class="fas fa-fax"></i>
+                            <h5> 01552913175 </h5>
+                            <br>
+                            <i class="fas fa-envelope-open-text"></i>
+                            <h5> mahmoudn509@gmail.com </h5>
+                            <br>
+                            <i class="fas fa-globe-americas"></i>
+                            <h5> https://international-gate.netlify.com </h5>
+                        </div>
+
+                        <div class="link col-6 col-sm-6 col-md-6 col-lg-2 col-xl-2">
+                            <h3> Quick Links </h3>
+                            <div class="links">
+                                <a href="#"> Home </a>
+                                <a href="#"> About Us </a>
+                                <a href="#"> Our Works </a>
+                                <a href="#"> Offers </a>
+                            </div>
+                        </div>
+
+                        <div class="our_service col-6 col-sm-6 col-md-6 col-lg-2 col-xl-2">
+                            <h3> Our Services </h3>
+                            <div class="services">
+                                <span> develop </span>
+                                <span> develop </span>
+                                <span> develop </span>
+                                <span> develop </span>
+                            </div>
+                        </div>
+
+                        <div class="message col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                            <h3> Your Messange </h3>
+                            <form action="index.html" method="post">
+                                <input type="text" name="name" id="name" placeholder="Your Name">
+                                <input type="email" name="email" id="email" placeholder="Your Email">
+                                <input type="text" name="phone" id="phone" placeholder="Your Phone">
+                                <textarea name="message" id="message" cols="10" rows="2"
+                                    placeholder="Message"></textarea>
+                                <input type="submit" name="submit" value="Submit">
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="copyright">
+                    <h5> Copyright 2019 @ Mahmoud Nagy All Rights reserved </h5>
                 </div>
             </div>
-
-            <div class="our_service col-6 col-sm-6 col-md-6 col-lg-2 col-xl-2">
-                <h3> Our Services </h3>
-                <div class="services">
-                    <span> develop </span>
-                    <span> develop </span>
-                    <span> develop </span>
-                    <span> develop </span>
-                </div>
-            </div>
-
-            <div class="message col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
-                    <h3> Your Messange </h3>
-                    <form action="index.html" method="post">
-                        <input type="text" name="name" id="name" placeholder="Your Name">
-                        <input type="email" name="email" id="email" placeholder="Your Email">
-                        <input type="text" name="phone" id="phone" placeholder="Your Phone">
-                        <textarea name="message" id="message" cols="10" rows="2" placeholder="Message"></textarea>
-                        <input type="submit" name="submit" value="Submit">
-                </form>
-            </div>
-        </div>    
-    </div>
-    <div class="copyright">
-            <h5> Copyright 2019 @ Mahmoud Nagy All Rights reserved </h5>
-    </div>
-</div>
-    </footer>
+        </footer>
 
 
 
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
-    <script src="jquery.nicescroll-3.7.6/jquery.nicescroll.js"></script>
-    </script>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
+        <script src="jquery.nicescroll-3.7.6/jquery.nicescroll.js"></script>
+        </script>
 </body>
 
 </html>
